cmake_minimum_required(VERSION 3.1)

get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME})

### Configuration
set(MVSTUDIO_ROOT         ${CMAKE_CURRENT_LIST_DIR})
set(MVSTUDIO_BUILD_DIR    ${CMAKE_CURRENT_BINARY_DIR})
set(MVSTUDIO_THIRD_PARTY  ${MVSTUDIO_ROOT}/3rd_party)

ADD_SUBDIRECTORY("3rd_party/clapack")
ADD_SUBDIRECTORY("3rd_party/cminpack")
ADD_SUBDIRECTORY("3rd_party/cmvs-pmvs")
ADD_SUBDIRECTORY("3rd_party/graclus")
ADD_SUBDIRECTORY("3rd_party/jpeg")
ADD_SUBDIRECTORY("3rd_party/nlopt")
#ADD_SUBDIRECTORY("3rd_party/pba")
ADD_SUBDIRECTORY("3rd_party/png")
ADD_SUBDIRECTORY("3rd_party/QGLViewer")
ADD_SUBDIRECTORY("3rd_party/sba")
ADD_SUBDIRECTORY("3rd_party/tinycthread")
ADD_SUBDIRECTORY("3rd_party/zlib")
ADD_SUBDIRECTORY("3rd_party/glew")
ADD_SUBDIRECTORY("3rd_party/SiftGPU")
ADD_SUBDIRECTORY("MVStudio")
ADD_SUBDIRECTORY("algo")
ADD_SUBDIRECTORY("basic")
ADD_SUBDIRECTORY("image")
ADD_SUBDIRECTORY("math")
ADD_SUBDIRECTORY("mvglib")
ADD_SUBDIRECTORY("opengl")
ADD_SUBDIRECTORY("pointset")
ADD_SUBDIRECTORY("sfm")
ADD_SUBDIRECTORY("test")

